colorize the circle and embed ui into main.py

--- a/UI.ui
+++ b/UI.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Какое-то окно</string>
+   <string>Какое-то окно (Теперь случайный цвет!!!!)</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
